Tweaked site building

--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -4,6 +4,4 @@
   href: articles/
   homepage: articles/docfx_getting_started.md
 - name: API Documentation
-  href: obj/api/
-- name: REST API
-  href: restapi/
+  href: ../site/yml/api/
