--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@2.3.1
+        uses: actions/checkout@v2.3.5
 
       - name: Build Docs
         uses: nikeee/docfx-action@v1.0.0
